--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -2395,6 +2395,10 @@ html {
   height: 100vh;
 }
 
+.w-3\/5 {
+  width: 60%;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -2467,6 +2471,10 @@ html {
   gap: 0.25rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -2524,6 +2532,10 @@ html {
   stroke: #fff;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -2563,6 +2575,11 @@ html {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .text-left {
@@ -2658,6 +2675,10 @@ html {
 
   .max-2xl\:hidden {
     display: none;
+  }
+
+  .max-2xl\:items-center {
+    align-items: center;
   }
 
   .max-2xl\:text-center {
